# schwadler

./: .gitignore  Cargo.toml  README.md  SPEED_TRACKER.md
benches/: resolution.rs
benches/fixtures/: massive.gemfile  medium.gemfile  rails.gemfile  simple.gemfile
scripts/: profile.sh
src/: cache.rs  full_index.rs  gemfile.rs  gemspec.rs  git.rs  incremental.rs  index.rs  installer.rs  lib.rs  lockfile.rs  main.rs  resolver.rs  rubygems.rs  timing.rs
test_gemfiles/gemspec_test/: Gemfile  test_gem.gemspec
test_gemfiles/medium/: Gemfile
